fix mobile nav spacing

--- a/src/index.css
+++ b/src/index.css
@@ -191,8 +191,8 @@ img {
   }
 
   .nav-links.resume {
-    margin-bottom: 2px;
-    margin-top: 2px;
+    margin-bottom: 20px;
+    margin-top: 20px;
   }
 
   .nav-toggle {
